# latsar2026

./: README.md
Test Data 2/: DaftarPegawai_Pegawai PNS_Lihat Di Seluruh Unor Induk (25).xlsx  DaftarPegawai_Pegawai PPPK_Lihat Di Seluruh Unor Induk (18).xlsx
nip_check_and_compare-main/: DatayangSama.xlsx  Provinsi.xlsx  README_nip_checker.md  provinsi_info.json  test_mapping.json
nip_check_and_compare-main/code/: app.py  check_prov.py  data_sama_temp.csv  discrepancy_sample.json  header.txt  requirements.txt  siasn_columns.txt  stats.json  test_extraction.py
nip_check_and_compare-main/code/templates/: detail.html  results.html  upload.html
nip_check_and_compare-main/dataset/: DaftarPegawai_Pegawai PPPK_Lihat Di Seluruh Unor Induk (5) (1).xlsx
nip_check_and_compare-main/dataset/test_dataset/: DaftarPegawai_Pegawai PPPK_Lihat Di Seluruh Unor Induk (5) (1).xlsx
nip_check_and_compare-main/nip_check_and_compare-main/: .gitignore
nip_check_and_compare-main/nip_check_and_compare-main/code/: README.md  app.py  debug_compare.py  pyproject.toml
nip_check_and_compare-main/nip_check_and_compare-main/code/templates/: index.html  reference.html  results.html
nip_check_and_compare-main/nip_check_and_compare-main/dataset/: DaftarPegawai_Pegawai PNS_Lihat Di Seluruh Unor Induk (5) (1).xlsx
nip_check_and_compare-main/notes/: nip_data_checker.md
nip_check_and_compare-main/quick_check_duplicates/: nip_duplicates.txt
nip_check_and_compare-main/quick_test/: contoh_simpeg.csv  siasn_data.csv
(+4 files in other folders)
